/*
 * SPDX-FileCopyrightText: 2020-present Open Networking Foundation <info@opennetworking.org>
 *
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package onos.test.simulation;

// SimulationLifecycleRequest is a simulation request
message SimulationLifecycleRequest {
    // simulation is the simulation name
    string simulation = 1;

    // args is the simulation arguments
    map<string, string> args = 2;
}

// SimulationLifecycleResponse is a response to a SimulationRequest
message SimulationLifecycleResponse {

}

// SimulatorRequest is a request to run a simulation
message SimulatorRequest {
    // simulation is the simulation name
    string simulation = 1;

    // register is the register address
    string register = 2;
}

// SimulatorResponse is a response indicating a simulation output
message SimulatorResponse {
    // error is a simulation error
    string error = 1;
}

// SimulatorService is a simulation worker service
service SimulatorService {
    rpc SetupSimulation (SimulationLifecycleRequest) returns (SimulationLifecycleResponse);
    rpc TearDownSimulation (SimulationLifecycleRequest) returns (SimulationLifecycleResponse);
    rpc SetupSimulator (SimulationLifecycleRequest) returns (SimulationLifecycleResponse);
    rpc TearDownSimulator (SimulationLifecycleRequest) returns (SimulationLifecycleResponse);
    rpc StartSimulator (SimulatorRequest) returns (SimulatorResponse);
    rpc StopSimulator (SimulatorRequest) returns (SimulatorResponse);
}
